--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.2",
-        "pestphp/pest": "^2.34",
+        "pestphp/pest": "^3.8",
         "phpstan/phpstan": "^1.11"
     },
     "autoload": {
@@ -33,6 +33,9 @@
         "stan": "phpstan analyse"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
