--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,10 @@
         "php": ">=8.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.2",
+        "mockery/mockery": "^1.6",
         "pestphp/pest": "^3.8",
-        "phpstan/phpstan": "^1.11"
+        "phpstan/phpstan": "^1.11",
+        "phpunit/phpunit": "^11.2"
     },
     "autoload": {
         "psr-4": {
