feat(CI): Update coverage settings and add deploy coverage workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           extensions: sockets
-          coverage: xdebug
+          coverage: none
 
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
@@ -39,6 +39,4 @@ jobs:
 
       - name: Run tests
         run: composer test
-
-      - name: Run tests with coverage
-        run: composer test -- --coverage-clover build/logs/clover.xml
+        
